# sponzatestapp

./: 00455_OpenfootageNET_field_low.hdr  CMakeLists.txt  SSGIEffect.qml  Sponza.qml  Suzanne.qml  main.cpp  main.qml  qlm_suzanne1.exr  ssgi_1.frag  ssgi_2.frag  ssgi_2_dualfilter_blur_down.frag  ssgi_2_dualfilter_blur_up.frag  ssgi_3.frag  suzanne.mesh  triangle.cpp  triangle.h
